@@ -40,7 +40,7 @@ public class LazyPKUpgradeColumnImpl extends PKUpgradeColumnImpl {
 			newValue = (Long)valueMapper.getNewValue(oldValue);
 		}
 		catch (StagnantRowException sre) {
-			newValue = new Long(increment());
+			newValue = Long.valueOf(increment());
 
 			valueMapper.mapValue(oldValue, newValue);
 		}
