@@ -40,8 +40,8 @@ public class LayoutComparator extends OrderByComparator<Layout> {
 
 	@Override
 	public int compare(Layout layout1, Layout layout2) {
-		Long groupId1 = new Long(layout1.getGroupId());
-		Long groupId2 = new Long(layout2.getGroupId());
+		Long groupId1 = Long.valueOf(layout1.getGroupId());
+		Long groupId2 = Long.valueOf(layout2.getGroupId());
 
 		int value = groupId1.compareTo(groupId2);
 
@@ -54,8 +54,8 @@ public class LayoutComparator extends OrderByComparator<Layout> {
 			}
 		}
 
-		Long layoutId1 = new Long(layout1.getLayoutId());
-		Long layoutId2 = new Long(layout2.getLayoutId());
+		Long layoutId1 = Long.valueOf(layout1.getLayoutId());
+		Long layoutId2 = Long.valueOf(layout2.getLayoutId());
 
 		value = layoutId1.compareTo(layoutId2);
 
